fix(mobile): Fix issue where font's where too small

--- a/src/sass/controls/_pf-ui-elements.scss
+++ b/src/sass/controls/_pf-ui-elements.scss
@@ -23,7 +23,7 @@
         line-height: $pf-large-font-size-mobile;
         font-size: $pf-large-font-size-mobile;
         @media handheld, only screen and (max-width: 375px) {
-            font-size: 4vw;
+            font-size: 9vw;
         }
     }
 }
